--- a/react-nodejs demo/client/package.json
+++ b/react-nodejs demo/client/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "e-commerce",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.2.0"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
